Update Print feature and a few other things

--- a/CoffeeShopManager/GUI/Properties/Resources.resx
+++ b/CoffeeShopManager/GUI/Properties/Resources.resx
@@ -292,4 +292,10 @@
   <data name="hammer_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hammer_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="coffeecupicon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\coffeecupicon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="coffeeflat" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\coffeeflat.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
