--- a/CoffeeShopManager/GUI/UserControlOrderProduct.resx
+++ b/CoffeeShopManager/GUI/UserControlOrderProduct.resx
@@ -781,4 +781,7 @@
         /////////////////////////////////////////////////////////////////////////////w==
 </value>
   </data>
+  <metadata name="errEmail.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>327, 17</value>
+  </metadata>
 </root>
