--- a/CoffeeShopManager/GUI/frmLogin.vi-VN.resx
+++ b/CoffeeShopManager/GUI/frmLogin.vi-VN.resx
@@ -117,10 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="lblLanguage.Size" type="System.Drawing.Size, System.Drawing">
+    <value>70, 17</value>
+  </data>
+  <data name="lblLanguage.Text" xml:space="preserve">
+    <value>Ngôn ngữ</value>
+  </data>
   <data name="lblPassword.Text" xml:space="preserve">
     <value>Mật khẩu</value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="lblRegister.Size" type="System.Drawing.Size, System.Drawing">
     <value>60, 17</value>
   </data>
